--- a/src/wallet/CMakeLists.txt
+++ b/src/wallet/CMakeLists.txt
@@ -63,9 +63,9 @@ set(wallet_private_headers
   ringdb.h
   node_rpc_proxy.h)
 
-ryo_private_headers(wallet
+PASTA_private_headers(wallet
   ${wallet_private_headers})
-ryo_add_library(wallet
+PASTA_add_library(wallet
   ${wallet_sources}
   ${wallet_private_headers})
 target_link_libraries(wallet
@@ -93,7 +93,7 @@ set(wallet_rpc_headers)
 set(wallet_rpc_private_headers
   wallet_rpc_server.h)
 
-ryo_private_headers(wallet_rpc_server
+PASTA_private_headers(wallet_rpc_server
   ${wallet_rpc_private_headers})
 monero_add_executable(wallet_rpc_server
   ${wallet_rpc_sources}
@@ -121,7 +121,7 @@ target_link_libraries(wallet_rpc_server
     fmt::fmt-header-only)
 set_property(TARGET wallet_rpc_server
   PROPERTY
-    OUTPUT_NAME "ryo-wallet-rpc")
+    OUTPUT_NAME "PASTA-wallet-rpc")
 install(TARGETS wallet_rpc_server DESTINATION bin)
 
 
