--- a/src/ringct/CMakeLists.txt
+++ b/src/ringct/CMakeLists.txt
@@ -53,9 +53,9 @@ set(ringct_basic_private_headers
   rctTypes.h
   bulletproofs.h)
 
-ryo_private_headers(ringct_basic
+pasta_private_headers(ringct_basic
   ${crypto_private_headers})
-ryo_add_library(ringct_basic
+pasta_add_library(ringct_basic
   ${ringct_basic_sources}
   ${ringct_basic_private_headers})
 target_link_libraries(ringct_basic
@@ -77,9 +77,9 @@ set(ringct_private_headers
   rctSigs.h
 )
 
-ryo_private_headers(ringct
+pasta_private_headers(ringct
   ${crypto_private_headers})
-ryo_add_library(ringct
+pasta_add_library(ringct
   ${ringct_sources}
   ${ringct_headers}
   ${ringct_private_headers})
