--- a/src/serialization/CMakeLists.txt
+++ b/src/serialization/CMakeLists.txt
@@ -49,9 +49,9 @@ set(serialization_headers)
 set(serialization_private_headers
   json_object.h)
 
-ryo_private_headers(serialization
+pasta_private_headers(serialization
   ${serialization_private_headers})
-ryo_add_library(serialization
+pasta_add_library(serialization
   ${serialization_sources}
   ${serialization_headers}
   ${serialization_private_headers})
