--- a/src/version.cpp.in
+++ b/src/version.cpp.in
@@ -1,20 +1,20 @@
-#define DEF_PASTA_VERSION "0.6.1.0"
+#define DEF_pasta_VERSION "0.6.1.0"
 
 //! git will put "#define GIT_ARCHIVE 1" on the next line inside archives. $Format:%n#define GIT_ARCHIVE 1$
 #if defined(GIT_ARCHIVE)
-#   define DEF_PASTA_VERSION_TAG "$Format:%h$"
-#   define DEF_PASTA_BRANCH "unknown"
+#   define DEF_pasta_VERSION_TAG "$Format:%h$"
+#   define DEF_pasta_BRANCH "unknown"
 #else
-#   define DEF_PASTA_VERSION_TAG "@VERSIONTAG@"
-#   define DEF_PASTA_BRANCH "@GIT_BRANCH@"
+#   define DEF_pasta_VERSION_TAG "@VERSIONTAG@"
+#   define DEF_pasta_BRANCH "@GIT_BRANCH@"
 #endif
 
-#define DEF_PASTA_RELEASE_NAME "Fermi Paradox"
-#define DEF_PASTA_VERSION_FULL DEF_PASTA_VERSION "-" DEF_PASTA_VERSION_TAG "/" DEF_PASTA_BRANCH
+#define DEF_pasta_RELEASE_NAME "Fermi Paradox"
+#define DEF_pasta_VERSION_FULL DEF_pasta_VERSION "-" DEF_pasta_VERSION_TAG "/" DEF_pasta_BRANCH
 
 #include "version.h"
 
-const char* const PASTA_VERSION_TAG = DEF_PASTA_VERSION_TAG;
-const char* const PASTA_VERSION = DEF_PASTA_VERSION;
-const char* const PASTA_RELEASE_NAME = DEF_PASTA_RELEASE_NAME;
-const char* const PASTA_VERSION_FULL = DEF_PASTA_VERSION_FULL;
+const char* const pasta_VERSION_TAG = DEF_pasta_VERSION_TAG;
+const char* const pasta_VERSION = DEF_pasta_VERSION;
+const char* const pasta_RELEASE_NAME = DEF_pasta_RELEASE_NAME;
+const char* const pasta_VERSION_FULL = DEF_pasta_VERSION_FULL;
